resolving tab issues on safari
adding -webkit-backface-visibility: hidden;

--- a/styles/newvertical.css
+++ b/styles/newvertical.css
@@ -647,7 +647,7 @@ body.cv #code .repos .description {
 		/* hide back of pane during swap */
 		.front, .back {
 			backface-visibility: hidden;
-
+			-webkit-backface-visibility: hidden;
 			position: absolute;
 			top: 0;
 			left: 0;
